[gd_scene load_steps=2 format=3 uid="uid://cjiu4tdvclmlu"]

[ext_resource type="Script" uid="uid://ma5op81nd4te" path="res://Art/Terrain/menu.gd" id="1_1rerr"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_right = 13.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1rerr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Change_character" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Change character"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(76, 65)
zoom = Vector2(4, 4)

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Change_character" to="." method="_on_change_character_pressed"]
